ansible/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Ensures paths are rewritten correctly
spec:
  rules:
  - host: 192.168.56.240
    http:
      paths:
      - path: /prometheus/*
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-kube-prom-prometheus  # Matches the service name
            port:
              number: 9090  # Matches the service port


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Ensures paths are rewritten correctly
spec:
  rules:
  - host: 192.168.56.240
    http:
      paths:
      - path: /grafana/*
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-grafana  # Matches the service name
            port:
              number: 80  #
